[package]
name = "neat_race"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "^0.15.6", features = ["rayon"]}
rayon = "^1.6"
macroquad = "^0.3.25"
rand = "^0.8.5"
rand_chacha = "^0.3.1"
rusty_neat = "^0.1.0"
bincode = "^1.3.3"
serde = { version = "^1.0.125", features = ["derive"] }
