[package]
name = "neat_race"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "^0.16", features = ["rayon"]}
rayon = "^1.10"
macroquad = "^0.4"
rand = "^0.9"
# rusty_neat = "^0.1"
rusty_neat = {path = "../rusty_neat"}
bincode = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
